--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,12 @@
+
 @import "tailwindcss";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
 }
 
 @theme inline {
@@ -21,6 +25,7 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: blueviolet;
+font-family: 'Coming Soon', cursive;
 }
+
